syntax = "proto3";
option go_package = "github.com/alvidir/oauth/proto/client";

package client;
import "google/protobuf/empty.proto";

enum TicketKind {
  RESTORE_CREDENTIALS = 0;
}

// TicketRequest description
message TicketRequest {
  TicketKind kind = 1; 
  string ident = 2; // a unique username/email or label
}

// TicketResponse description
message TicketResponse {
  string id = 1;
  int64 deadline = 2;
}

// ResolveRequest description
message ResolveRequest {
  string id = 1; // a unique username
  string data = 2; // data required by the resolution
}

service Profile {
  rpc Ticket(client.TicketRequest) returns (client.TicketResponse);
  rpc Resolve(client.ResolveRequest) returns (google.protobuf.Empty);
}